Source/WebCore/accessibility/atk/AccessibilityObjectAtk.cpp
@@ -84,6 +84,10 @@ AccessibilityObjectInclusion AccessibilityObject::accessibilityPlatformIncludesO
     if (!renderObject)
         return DefaultBehavior;
 
+    // The text displayed by an ARIA menu item is exposed through the accessible name.
+    if (renderObject->isAnonymousBlock() && parent->isMenuItem())
+        return IgnoreObject;
+
     // We don't want <span> elements to show up in the accessibility hierarchy unless
     // we have good reasons for that (e.g. focusable or visible because of containing
     // a meaningful accessible name, maybe set through ARIA), so we can use
